<resources>
    <string name="app_name">SSW_2017</string>


    <string name="one">01安且吉兮</string>
    <string name="two">02生生忘</string>
    <string name="three">03主旋律</string>
    <string name="four">04夏天雨</string>
    <string name="five">05言之无物的歌</string>
    <string name="six">06雨云词</string>
    <string name="seven">07摇篮曲</string>
    <string name="eight">08寻常</string>
    <string name="nine">09不见了你夏天</string>


    <!-- lyrics -->
    <string name="lyc_01">
        词曲：君子亮\n
无衣无扇无人伴\n
安兮吉兮湖与山\n
竹成海兮云成船\n
雨作桅兮天作帆\n
\n
窗外惊起\n
熙攘的麻雀\n
它衔着岁月\n
总飞往前面\n
你还撑着\n
疲倦的双眼\n
就像那初夏\n
弯弯的柳叶\n
\n
空中的细雨\n
将视线朦灭\n
淅淅沥沥淋着枇杷树叶\n
我看不见\n
熟悉的气味总会麻木了感觉\n
不复有当年那么多的喜悲\n
过去的一切在白色天空中若隐若现\n
抬头寻找阳光\n
却发现了阴天\n
低头思念温暖\n
还仿佛在跟前\n
成长不可避免\n
伴随着离别\n
\n
树上的毛毛虫终会化蛹而成蝶\n
我看见天空中又有孤鸿明灭\n
伸手让它陪我\n
看这繁华世界\n
它却燕尾一剪\n
消失不见\n
\n
无衣无扇无人伴\n
安兮吉兮湖与山\n
竹成海兮云成船\n
雨作桅兮天作帆\n
明月轻照犬低吠\n
虫声略急浮沉微\n
一朝孩童别梦去\n
从此披霜戴雨归\n
    </string>


    <string name="lyc_02">
        词曲：君子亮\n

筑箸为墙点墨成窗，风过云展信铃轻荡\n
彩蝶穿花翅满青春，夕阳斜懒塘水微漾\n
浮沉喜悲沧海来潮，人事转换阴晴无常\n
短笛轻啸些些纷扰，十里罗兰一袖星光\n
\n
世界之大何处才能让我拥有一个家\n
落下每一片雪花，都如净玉无瑕\n
远望着歌声沙哑，听不到回答\n
风吹来谁的哀怨，换走我的潇洒\n
\n
时间老人挥着冰锄，凿出时间一分一秒\n
几番寒暖几番别离，谁也不能再长不大\n
翻过一天天的日记，扯碎一页页的惆怅\n
离开熟悉的人和地方，去看看未来是怎样\n
\n
世界之大何处才能让我拥有一个家\n
走过每一个城市，孤身看繁华\n
还记得行云如止水，浙北春未夏\n
陌上满鲜花，点缀不归来的年华\n
\n
世界之大寻寻觅觅才能有我一个家\n
心心念念希望你能在身旁\n
何时起这天空漆黑冷得每天都一样\n
才让岁月流转欺上了白发\n
\n
一片祥云化雨落\n
两行灯火夜漆黑\n
繁华总是留不住\n
一遇寂静便生悲\n
\n
一片祥云化雨落\n
两行灯火夜漆黑\n
繁华总是留不住\n
一遇寂静便生悲\n
\n
经历沧桑变化爱与苦我给你一个家\n
从此秋月春华品茗庭中赏\n
小坐弹唱霞饮夕阳林中归燕成双\n
风吹来谁的思念\n
遥寄明月骗盏茶\n
    </string>


    <string name="lyc_03">
        词曲：君子亮\n
\n
把懵懂年少多余的幻想\n
装出了行囊\n
才发现为它笑和哭的岁月\n
怎么那么长\n
\n
车子总是一年多几辆\n
停在曾是我的地方\n
真的心里想的像风一样\n
会撞上一道墙\n
\n
我欠你一双飞上天空的翅膀\n
却又不能留你在身旁\n
是我害怕了流浪\n
才有这悲彻的漫长\n
如今冬去大地又换上了春装\n
勇敢从未离开过年轻的脸庞\n
我一时多么想\n
曾有人教我别再逞强\n
\n
夏夜晚风夕起虫吟四方\n
街灯已点亮\n
我们谈着笑着\n
骑车回家\n
汗淋湿透了衣裳\n
大人身高手长体格壮\n
老人投篮总进框\n
别怕赢球本来不简单\n
把球给猴王\n
\n
我记得那是一个夏天的晚上\n
你我说好未来一起闯\n
转眼未来成过往\n
为何它一去不回还\n
如今冬去大地又换上了春装\n
勇敢从未离开过年轻的脸庞\n
又一时多么想\n
紧握住双手绝不再放\n
\n
如今应是雨润溪绿了村庄\n
我站在窗前望\n
车水流淌\n
会不会树梢挂住了夕阳\n
山川海洋托住了月亮\n
别让我在黑夜里\n
找不到来的方向\n
\n
我欠你一双飞上天空的翅膀\n
和你不忘初心去徜徉\n
每当星空在闪光\n
悲伤也会有力量\n
如今冬去大地又换上了春装\n
勇敢从未离开过我的眼光\n
贪一时欢晌v
又何惧泪水曾在眼眶\n
\n
我是清都山水郎\n
天教分付与疏狂\n
曾批给雨披风卷\n
累上留云借月章\n
诗万首酒千觞\n
几曾著眼看侯王\n
一夜梦醒黄粱\n
再见这年华\n
就算艳阳高照\n
也别叫我起床\n
    </string>

    <string name="lyc_04">
        词曲：君子亮\n
\n
风吹南天云入樽\n
一树叶见误终身\n
才见阳光照在地上\n
转眼雨倾盆v
\n
从未尝过相思苦\n
还道一生不念人\n
来来走走如雨一阵阵\n
相随如蝉声v
\n
夏天会下雨巷里荡起涟漪\n
也那样美丽何必盼着天晴\n
经历冬寒和春困的洗礼\n
不辜负夏的期许\n
\n
夏天的雨落地化为水汽\n
他有些话一直藏在心里\n
越在乎的友情\n
越不知今后如何继续\n
\n
星如弦，月似钩\n
等候换了句问候\n
还道彼此两心相投\n
他笑着转身走\n
\n
顾目流盼香满袖\n
星眸低转半含羞\n
一念怯懦几世修得\n
一刻的温柔\n
\n
夏天会下雨巷里荡起涟漪\n
也那样清新何必盼着天晴\n
又多少秋殇冬寂春煦夏雨\n
能该忘记的忘记\n
\n
夏天的雨落地化为水汽\n
易碎的过往还有多少秘密\n
说不出的一句\n
只好好写在日记\n
\n
书上说了夏虫不可语冰\n
但可以穿经越纬寻找四季\n
再找个温柔不问骄阳烈雨\n
浸润了木兰低语\n
\n
也可能怀念只是因为失去\n
还是愿再看万树苍翠欲滴\n
小惆怅的点滴\n
有一天总会笑着想起\n
\n
风摇树影满满都是回忆\n
回忆里那天他输给了勇气\n
他知道再找不到一个结局\n
能自己放过自己\n
\n
从此他每年夏天都会回去\n
走那条路淋着她窗下的雨\n
古藤依然绕旧居\n
可新人换了旧识\n
    </string>



    <string name="lyc_05">
        词曲：君子亮\n
\n
伤情最是晚凉天\n
憔悴斯人不堪怜\n
邀酒催肠三杯醉\n
寻香惊梦五更寒\n
钗头凤斜卿有泪\n
荼蘼花了我无缘\n
小楼寂寞新雨月\n
也难如钩也难圆\n
\n
人海迷迷茫茫\n
岁月幽怨的长\n
捧起一汪忧伤\n
风干化为月光\n
月亮圆圆弯弯\n
映照谁的脸庞\n
脸上灯光月光\n
灯下欢颜成双\n
\n
看见微风吹过杨柳岸\n
看不见荷塘初绽春去晚\n
听不见莺语声声望雨眠\n
听闻牵念早有良人伴\n
\n
清茶杯中已干\n
老人他摇头把扇戏说完\n
谁低眼浊泪湿青衫\n
亭台尚好几年\n
昔日深情积重难返\n
伊人倦对妆台\n
懒把空杯斟满\n
\n
松下青青池塘\n
沾唇微染红绛\n
云已千里随风\n
对镜还贴花黄\n
俯仰冰雪一杯\n
聊解酷暑寒凉\n
故人新花两端\n
归处他乡故乡\n
\n
清茶杯中已干\n
老人他摇头把扇戏说完\n
谁低眼浊泪湿青衫\n
亭台尚好几年\n
昔日深情积重难返\n
伊人倦对妆台\n
懒把空杯斟满\n
\n
夕阳笑我癫\n
独下山后眠\n
雀鸟还知恨\n
清泪啼红血\n
等闲人心随世变\n
\n
风住杨柳岸\n
粼粼波光点点眷念\n
花重开，你归来\n
再把空杯斟满\n
    </string>

    <string name="lyc_06">
        词曲：君子亮\n
        雷声隆隆 东南暴动\n
万狼震地 千象排空\n
霹雳云涌 怒雨翻风\n
草伏木躬 岩断崖融\n
威天之怒 视生如死\n
吞地之恨 有始无终\n
紫电连环如剑气\n
若非失手翻瑶池\n
雨如激\n
\n
稠云北去薄云稀\n
千变万化通神机\n
岳王走剑 吕布挥戟\n
战马白绒起平地\n
蜻蜓点水蝶穿花\n
九万里天鹏正举\n
九子缠龙 百鸟朝凤\n
温柔麒麟倚雕松\n
夕阳虽尽晚\n
红染半天通\n
白云洗天千里碧\n
残霞饮血半弧弓\n
\n
岳王走 吕布穷\n
战马失散风流中\n
蜻蜓有意蝶无心\n
赤翅大鸟不恋生\n
龙趋百兽回笼\n
凤凰涅槃暗噬空\n
\n
惊时漫天一色墨\n
长鸿俯仰啸悲歌\n
夜薄风高摇杨柳\n
青松明月相诉说\n
叶上清珠缓缓落\n
击花而去成颜色\n
譬如天眼次序开\n
伴月始有星朵朵\n
\n
云雨总是太美丽\n
可怜转眼尽\n
守得云开见天明\n
又惜风流云散去\n
    </string>

    <string name="lyc_07">
        词：汪啊锣 君子亮\n
曲：浮沉生生忘\n
\n
锦户行，小桥共书段。\n
春江引雨落泽安。\n
红袖抚琴声声慢。\n
倚水叹竹篮。\n
\n
悠悠浮萍边似水流年，\n
摇着小花灯渐渐漂远。\n
对岸的夜是否也有诗篇，\n
写天上月亮边你的笑脸。\n
\n
轻轻的哼唱怕惊扰孤单，\n
人生而寂寞又何妨贪欢。\n
从未敢忘却是夏天的雨，\n
再见是世上最美的语言。\n
你听啊。\n
\n
青苹末飞起一只蝴蝶，\n
斑斓的幻想在梦里相见。\n
它越飞越高高过了树巅，\n
留下了愿望在我的指尖。\n
\n
向上是星空向下灯火点点，\n
每一份想念就点亮一双眼。\n
你听着窗外星星的声音，\n
微笑与温暖会伴你入眠。\n
晚安是世上最美的语言。\n
\n
锦户行，小桥共书段。\n
春江引雨落泽安。\n
红袖抚琴声声慢。\n
倚水叹竹篮。\n
\n
锦户行，小桥共书段。\n
春江引雨落泽安。\n
红袖抚琴声声慢。\n
倚水叹竹篮。\n
    </string>

    <string name="lyc_08">
        词：汪啊锣\n
曲：君子亮\n
\n
梦醒一朝\n
对白都落了寻常\n
亦如叙事诗\n
拆掉每一行的韵脚v
\n
再婉转语调\n
都迁就不了\n
怀念你在街角\n
星眸转，娥眉淡骚\n
念旧事多轻佻\n
\n
明示了预兆你黯淡的妆\n
涂抹在眼泪之上才觉出凄伤\n
不被署名的好\n
就无法珍藏\n
慢慢腐朽成寻常再慢慢丢掉\n
\n
却独留恋这一秒\n
春风拂面伊人笑\n
记得尚不如忘掉\n
溢满了就不被需要\n
\n
我们也曾以为捱过了寻常\n
多少离别的苦笑\n
重聚时的拥抱\n
翻刻了时光却播映不了\n
那刻你轻捻衣角\n
笑得现世无双\n
    </string>


    <string name="lyc_09">
        词曲：汪啊锣\n
\n
你问我什么代表夏天\n
我想起西瓜啤酒和海边\n
还有音乐节晚上八点\n
准时亲吻天空的火焰\n
\n
都是些微不足道的画面\n
就像是你给我的感觉\n
很平淡却又很强烈\n
是白开水味道的苏打cream\n
\n
哦一天一天看着太阳慢慢移开北回归线\n
我突然有种莫名的直觉\n
你会和夏天一起消失不见\n
\n
如果失落是难免慌不择路的不是夏天\n
你会不会为了纪念\n
把热裤吊带再多穿一天\n
\n
如果所谓的一年不是四季轮回交替一个圈\n
你敢不敢就陪我留在夏天\n
    </string>



    <!-- background story -->

    <string name="bs_01">2012</string>

    <string name="bs_02">2013</string>

    <string name="bs_03">2014
篮球</string>

    <string name="bs_04">
         22点50，轻快的流行歌奏响了晚自习下课的铃声。寂静的教室里渐渐有了声音，整理文具，翻查课本，以及聊天。\n
        他把椅子推进课桌，走出教室的前门。\n
        高天上的风吹开了薄云，那月亮的光洒在她的身上。她在门口，背倚着栏杆，双手相握垂在身前。头低着，乌黑的发丝在她精致的眼睛边飘动，她略显不安地用手把它们撩到耳后。\n
       她不曾回眸一笑百媚生，也不似九天仙女下凡尘。\n
       她是枝头一只百灵鸟，也是捧间一簇满天星。\n
       她抬头看到了他，大大的眼睛，黑白分明。她不知道他为什么一秒钟意外的神态，下一秒又恢复了平静，只挥了挥手，说了声拜拜，转身离去。\n
        是啊，为什么呢？就在白天，也在这栏杆旁，他说过的，请她相信自己。\n
        相信什么呢？谁也不敢再前进一步了。\n
        高天上的风将南边的云飞快地吹了过来，吹入了放在窗台上的杯中。不多时，暴雨倾盆而下，洗刷了世间污浊，也洗刷了无情人的记忆。\n
        她还在门前站着。乌黑的瞳色会发亮，像是天上的、会流泪的星星。  月儿弯弯照九州，也照着面前陆续离开的同学。她微笑着与他们问好。他们问她在等谁。她也不知道。\n
        许多年后，他们早已经断了联系，也有了各自的生活。他偶尔会梦到那个女孩，却再没梦到那些场景。在那些场景里，她欢快地喊他的名字，她在下雪天不打伞挽他的手，她生日时夹起蛋糕上最好看的一块老虎巧克力穿过很多朋友的身边跑过来送给他吃，她真诚地夸他有才华然后又损他长得不够帅；她的作文用要写题记，她的衣衫总是浅色；她不安地与他分享心事，她低着头等着她等待的人从面前离去。\n
        他此后又遇见过很多女孩，也明白了她不过是花海中的一瓣。比她好的女孩就像是晴空的夜里天上的星星。只是，那一瓣就是那一瓣，连相似的也没有。她会在别人的勇敢和温柔的呵护下，继续她绽放她快乐旺盛的生命力。这一点他也清楚，他并不伤感。\n
        毕竟，上面的故事都是我编的。\n
    </string>


    <string name="bs_05">
月亮照在池塘，\n
我双手捧起一汪。\n
轻轻晾在石上，\n
风干后就得到月光。\n
	--于2016\n
写时心中楚楚，而读来言之无物。\n
    </string>


    <string name="bs_06">词于2011\n
曲在2017\n

高中一年级的课间，别的同学都在谈笑玩耍，唯独这位勤奋努力的少年还坐在自己的座位上思考问题。\n
武林三国是一款需要很高智商的网页游戏，此刻他正为了其中的蜀国兵种贪狼营和南蛮象的数量最优配比问题而苦思冥想。\n
浙北的初夏多暴雨，瞬间来瞬间去，期间又狂躁无比。\n
雷声乍起，响响地炸开。大家都跑出去，在栏杆前观赏这天地的盛礼。\n
他也出来了，看着乌黑沉重的云团从东南方向以肉眼可以观察的速度移动过来，随着就是伴着响雷的如同立体瀑布的雨。\n
雷声隆隆，\n
东南暴动。\n
万狼震地，\n
千象排空。\n
随着几个排句脱口而出，他终于明白了：\n
        贪狼营与南蛮象在游戏初期的兵种配比应该是10：1。\n

转眼很多年过去，已经有好多个夏天，没有下过那样暴躁的雨了。\n</string>
    <string name="bs_07">2017.7
我说啊锣啊，我想写个摇篮曲，歌词要很有文化很有内涵很有诗意很高级的那种。\n
在充分了解了我的产品需求以后，汪啊锣同学沉思片刻，把他小学五年级写的一首忆江南拿出来给了我。\n</string>
    <string name="bs_08">2017.8
于杭州红星剧院宾馆，观赏维拉小姐姐主演的、阿加莎克里斯蒂小说改编话剧《无人生还》后\n
和汪啊锣同学疯狂人肉搜索小姐姐的演员信息而不得。\n
场间休息时，他拿出一份以前写给别人的词。\n
我心里思念着维拉小姐姐，越来心里越有求不得的悲苦，因此有感而发，就给它谱上了个曲\n</string>
    <string name="bs_09">2017.9
我问啊锣，这歌有故事啊\n
啊锣点起一根烟，深深吸了一口，缓缓吐出，目视着不知道是哪里的远方，悠悠地说了一句：\n
你难道从来没有看到过江流月涌吗\n</string>


</resources>
