<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.compassl.anji.ssw_2017.MainActivity">

    <TextView
        android:layout_marginLeft="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="专辑：生生忘" />

    <ScrollView
        android:background="#aabbcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ssw01aqjx"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_margin="3dp"/>

                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_01"
                    android:text="@string/one"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ssw02ssw"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_margin="3dp"/>

                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_02"
                    android:text="@string/two"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw03zxl"/>
                <Button
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_03"
                    android:text="@string/three"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw04xty"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_04"
                    android:text="@string/four"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw05yzwwdg"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_05"
                    android:text="@string/five"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw06yyc"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_06"
                    android:text="@string/six"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw07ylq"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_07"
                    android:text="@string/seven"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw08xc"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_08"
                    android:text="@string/eight"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ssw09bjlnxt"/>
                <Button
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_09"
                    android:text="@string/nine"/>

            </LinearLayout>





        </LinearLayout>

    </ScrollView>


</LinearLayout>
